[package]
name = "wgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.5"
log = "0.4.20"

ecs = { path = "../ecs" }
physics = { path = "../physics" }
wgpu = "0.19.1"
futures = "0.3.30"